[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-calc"
version = "1.0.0"
authors = [
  { name="Satyaa", email="satyaa@openclaw.ai" },
]
description = "High-performance Maritime Engineering and Navigation CLI suite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
navcalc = "main:main"

[project.urls]
"Homepage" = "https://github.com/CrimsonDevil333333/nav-calc"
